test/tests/compiler/18_structures/invalid_types/initializers/non_constant_static_init.plx
type struc pair(    a: i32    , b: i32    
    )
pub x: struc pair = $(1, 2)
#  you can't initialize a static variable with a non-constant expression
pub y: struc pair = x
